@@ -1,25 +1,18 @@
-appenders = console, file
+appenders = console
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
 
-appender.file.type = File
-appender.file.name = ERRORLOG
-appender.file.fileName=./logs/errors.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern= %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
+#appender.file.type = File
+#appender.file.name = ERRORLOG
+#appender.file.fileName=./logs/errors.log
+#appender.file.layout.type=PatternLayout
+#appender.file.layout.pattern= %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
 
-rootLogger.level = error
+rootLogger.level = info
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
-
-loggers=file
-logger.file.name=de.ids_mannheim.korap
-logger.file.level = error
-logger.file.appenderRefs = file
-logger.file.appenderRef.file.ref = ERRORLOG
-logger.file.additivity=true
 
 #loggers=file
 #logger.file.name=com.sun.jersey.test.framework.spi.container
